# work-time-tracker

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  app.rc  daily_durations.json  resources.qrc  run_app.bat  settings.json  state.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-bundle.yml  build.yml
docs/: ARCHITECTURE.md  BUILDING.md  GITHUB_ACTIONS.md  USAGE.md  index.html  privacy.html  script.js  style.css
src/: main.cpp
src/components/app_menu/: AbstractMenu.cpp  AbstractMenu.h  MainMenu.cpp  MainMenu.h
src/components/central_widget/: AbstractCentralWidget.cpp  AbstractCentralWidget.h  MainCentralWidget.cpp  MainCentralWidget.h
src/components/control_panel/: ControlPanel.cpp  ControlPanel.h
src/components/daily_chart_widget/: DailyChartWidget.cpp  DailyChartWidget.h
src/components/finish_time_widget/: FinishTimeWidget.cpp  FinishTimeWidget.h
src/components/stats_widget/: StatsWidget.cpp  StatsWidget.h
src/components/status_bar/: AbstractStatusBar.cpp  AbstractStatusBar.h  DefaultStatusBar.cpp  DefaultStatusBar.h
src/components/timer_chart/: TimerChart.cpp  TimerChart.h
src/components/timer_widget/: TimerWidget.cpp  TimerWidget.h
src/components/tray_helper/: TrayHelper.cpp  TrayHelper.h  TrayPanel.cpp  TrayPanel.h
src/models/: TimerEvent.h
src/states/main_window_state/: MainWindowState.cpp  MainWindowState.h
src/styles/: ButtonStyles.h  FinishTimeStyles.h  ProgressbarStyles.h  SettingsStyles.h  StatsStyles.h  TrayStyles.h
src/utils/: TimeCalculator.cpp  TimeCalculator.h
src/windows/about_window/: AboutWindow.cpp  AboutWindow.h
src/windows/base_windows/: BaseWindow.h
src/windows/main_window/: MainWindow.cpp  MainWindow.h
src/windows/settings_window/: SettingsWindow.cpp  SettingsWindow.h
